src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Period</label>
        <referenceTo>Accounting_Period__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_BMS_SchedNo__c</fullName>
        <formula>Order__r.BMS_ScheduleNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement (BMS SchedNo)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>It is the sum of invoice lines amount excluding VAT/Tax</description>
        <inlineHelpText>It is the sum of invoice lines amount excluding VAT/Tax</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>Invoice_Line__c.Line_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMS_Account_Code__c</fullName>
        <formula>Account__r.KV_CustAcctNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Invoice_Date__c</fullName>
        <inlineHelpText>It&apos;s a legacy field and value is populate only for the legacy ones.</inlineHelpText>
        <label>BMS Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_Invoice_Number__c</fullName>
        <description>t&apos;s a legacy field, this is present for the legacy ones.</description>
        <inlineHelpText>t&apos;s a legacy field, this is present for the legacy ones.</inlineHelpText>
        <label>BMS Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Order_ID__c</fullName>
        <formula>Order__r.BMS_Order_RecordID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Order__r.BillingCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Order__r.Billing_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Billing Contact)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Order__r.BillingCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Order__r.BillingState__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <formula>Order__r.BillingPostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_street__c</fullName>
        <formula>Order__r.BillingStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate order</fullName>
                </value>
                <value>
                    <fullName>Layup</fullName>
                </value>
                <value>
                    <fullName>Lost VOD Charged – Rental Period Credited</fullName>
                </value>
                <value>
                    <fullName>Other – add further comments</fullName>
                </value>
                <value>
                    <fullName>Rebilled – initial pricing error</fullName>
                </value>
                <value>
                    <fullName>Rebilled – moved to new account</fullName>
                </value>
                <value>
                    <fullName>Rebilled – new alignment date</fullName>
                </value>
                <value>
                    <fullName>Rebilled – new product line</fullName>
                </value>
                <value>
                    <fullName>Rebilled – uplift error</fullName>
                </value>
                <value>
                    <fullName>Service downtime</fullName>
                </value>
                <value>
                    <fullName>Test Invoice</fullName>
                </value>
                <value>
                    <fullName>VOD/Library Returned – Lost contract</fullName>
                </value>
                <value>
                    <fullName>VOD/Library Returned – Renewal</fullName>
                </value>
                <value>
                    <fullName>VOD/Library Returned – Sold or Scrapped</fullName>
                </value>
                <value>
                    <fullName>(DO NOT USE)VOD Returned</fullName>
                </value>
                <value>
                    <fullName>(DO NOT USE)Customer cancelled the order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Lines_in_Draft__c</fullName>
        <description>Number of Credit Lines which have not yet been posted</description>
        <label>Credit Lines in Draft</label>
        <summaryFilterItems>
            <field>Credit_Line__c.Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credited_Amount__c</fullName>
        <label>Credited Amount</label>
        <summarizedField>Credit_Line__c.Total_Line_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Line__c.Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credited_Net__c</fullName>
        <label>Credited Net</label>
        <summarizedField>Credit_Line__c.Net_Total__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credited_Tax__c</fullName>
        <label>Credited Tax</label>
        <summarizedField>Credit_Line__c.Tax__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credited_VAT__c</fullName>
        <label>Credited VAT</label>
        <summarizedField>Credit_Line__c.VAT__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <formula>Account__r.Customer_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_off_Date__c</fullName>
        <label>Cut off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Import__c</fullName>
        <description>Invoice IT has created the invoices using the extracted file from BMS. This field is used to say on which date the date was uploaded in SF. Date is in US format.</description>
        <inlineHelpText>Invoice IT has created the invoices using the extracted file from BMS. This field is used to say on which date the date was uploaded in SF. Date is in US format.</inlineHelpText>
        <label>Data Import</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015-02-16</fullName>
                </value>
                <value>
                    <fullName>2015-02-18 Cr Notes with No Inv Ref</fullName>
                </value>
                <value>
                    <fullName>2015-02-20 Zero AR for DR - Offsetting Payments For Invoices And CreditNotes</fullName>
                </value>
                <value>
                    <fullName>2015-04-10 45 credit notes</fullName>
                </value>
                <value>
                    <fullName>Neagtive Invoice Lines - CreditNote</fullName>
                    <isActive>false</isActive>
                    <label>Neagtive Invoice Lines - CreditNote</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Fields_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For the imported invoices, date value shows one day less. It was the problem with SF dataloader.</inlineHelpText>
        <label>Date Fields Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <inlineHelpText>Updated When Payment status is changed and the Payment Status = Paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <formula>IF(Date_Paid__c - Invoice_Date__c &lt; 0, 0, Date_Paid__c - Invoice_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Delivery Type like Print,Email or both.If it selected as email or both then the email is sent to the Billing Contact on invoice.</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Print</fullName>
                    <default>true</default>
                    <label>Print</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email &amp; Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>This is the total Discount provided on this Invoice.</description>
        <inlineHelpText>This is the total Discount provided on this Invoice.</inlineHelpText>
        <label>Discount Value</label>
        <summarizedField>Invoice_Line__c.Discount_Value__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>When is the last date of invoice to be paid.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it checked means Email has been sent to the customer.</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>For_Admin_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Admin Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IIT_Customer_Purchase_Order_Number__c</fullName>
        <formula>Order__r.Customer_Purchase_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_18_char_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice 18-char ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <label>Invoice Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <label>Invoice Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Reference__c</fullName>
        <description>This field is used to hold the custom invoice number you need. This can have a specific suffix, prefix or a sequence number based on your legal entity used.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to hold the custom invoice number you need. This can have a specific suffix, prefix or a sequence number based on your legal entity used.
Search Invoice IT documentation for &quot;Legal Entity&quot; to find out how to use this field</inlineHelpText>
        <label>Invoice Reference</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Run_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship to the Invoice Run.Invoice is child of Invoice Run.
This field tells from which Invoice Run the Invoice is generated.</description>
        <label>Invoice Run (Created By)</label>
        <referenceTo>Invoice_Run__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_State__c</fullName>
        <label>Invoice State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Proforma</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Asia_Account_Code__c</fullName>
        <formula>Account__r.KV_Asia_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KV Asia Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Processing_Date__c</fullName>
        <label>Last Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Customer_Reference__c</fullName>
        <formula>Account__r.KV_CustAcctNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_ID__c</fullName>
        <label>Master Order ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Name__c</fullName>
        <label>Master Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Payment_Terms__c</fullName>
        <label>Master Order Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <formula>HYPERLINK ( Master_Order_ID__c, Master_Order_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <description>This would be Subtotal - Discount value</description>
        <formula>Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This would be Subtotal - Discount value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Days_From_Invoice_Date__c</fullName>
        <formula>TODAY() - Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Days From Invoice Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Instalments__c</fullName>
        <label>No Of Instalments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Tries__c</fullName>
        <label>No of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Invoice_Lines__c</fullName>
        <label>Number Of Invoice Lines</label>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offline_D_R__c</fullName>
        <label>Offline D/R</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <formula>Order__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_Due_Days__c</fullName>
        <formula>If ( Due_Date__c &gt; Today() , 0, Today() - Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <summarizedField>Payment_Allocation__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Allocation__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed, Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Allocation__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Agent_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Batch__c</fullName>
        <label>Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch 1</fullName>
                </value>
                <value>
                    <fullName>Batch 2</fullName>
                </value>
                <value>
                    <fullName>Batch 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Request_Amount__c</fullName>
        <description>Use this field if you want to process partial payments for the Invoice</description>
        <label>Payment Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <formula>IF(
AND(Unpaid_Amount__c &gt; 0, Paid_Amount__c &gt; 0),
&apos;Partially Paid&apos;, IF(Unpaid_Amount__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
)</formula>
        <inlineHelpText>Payment Status of Paid can be paid fully or settled.</inlineHelpText>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>If ( Order__c == NULL, Master_Order_Payment_Terms__c , TEXT(Order__r.Payment_Terms__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Date__c</fullName>
        <label>Preferred Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Log_Number__c</fullName>
        <label>Reference Log Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regular Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Email__c</fullName>
        <formula>Order__r.Second_Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Dunning_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Dunning Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Account__c</fullName>
        <formula>Order__r.Shipping_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to contact for Shipping Contact</description>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Shipping Contact)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IF( OR(ISPICKVAL(Invoice_Status__c, &apos;Cancelled&apos;), ISPICKVAL( Invoice_Status__c , &apos;Invalid&apos;)), Image(&quot;https://c.na12.content.force.com/servlet/servlet.ImageServer?id=015U00000002jv0&amp;oid=00DU0000000HSiW&quot;,&quot;White&quot;),
IF((VT_Payment_Status__c == &apos;Paid&apos;), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
IF(TODAY() &gt; Due_Date__c &amp;&amp; (VT_Payment_Status__c != &apos;Paid&apos;),
Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Status__c</fullName>
        <label>Tax Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Avalara AvaTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Shows the total amount of Tax for all invoice lines applied to the invoice</description>
        <inlineHelpText>The total amount of Tax for all invoice lines</inlineHelpText>
        <label>Tax</label>
        <summarizedField>Invoice_Line__c.Tax__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Third_Contact_Email__c</fullName>
        <formula>Order__r.X3rd_Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Value__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <formula>Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Total Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <label>Total Line Amount</label>
        <summarizedField>Invoice_Line__c.Total_Line_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_0_30_Days__c</fullName>
        <description>Unpaid Amount from the Invoice Date(0-30 days)</description>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &lt;= 30, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unpaid Amount from the Invoice Date(0-30 days)</inlineHelpText>
        <label>Unpaid Amount(0-30 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_0_90_Days__c</fullName>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &lt;= 90, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount(0-90 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_121_180_Days__c</fullName>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &gt;= 121 &amp;&amp; No_Of_Days_From_Invoice_Date__c &lt;= 180, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount(121-180 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_180_Days__c</fullName>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &gt; 180, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount(&gt; 180 Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_30_days__c</fullName>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &gt; 30, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount &gt;30 days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_360_Days__c</fullName>
        <formula>IF(No_Of_Days_From_Invoice_Date__c &gt; 360, Unpaid_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount &gt;360 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount__c</fullName>
        <formula>ROUND(Total_Invoice_Value__c, 2) - ROUND(Paid_Amount__c, 2) - ROUND( Credited_Amount__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpost_Reason__c</fullName>
        <label>Unpost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order information entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Invoice generated before order adjustment</fullName>
                </value>
                <value>
                    <fullName>Wrong invoice or target dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Rate_Applied__c</fullName>
        <formula>IF( VAT__c = 0.00, 0, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Rate Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>